# ProjektDBMS1

./: .gitignore  README.md  baza_danych.db  klienci.csv  odczyty.csv  praca.ipynb  pyproject.toml  raportowanie.ipynb
docs/source/: conf.py  fourth.rst  second.rst  third.rst
main/: analiza.py  buduj.py  czysc.py  importuj.py  raport.py  wprowadz.py  wynik.py
mobile/: collect.py  generate_random.py
